Fixed header alignment issues

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 257px;
-    overflow-x: hidden;
     background-color: #40444B;
 }
 
@@ -27,6 +26,8 @@ footer {
 .header {
     height: 130px;
     width: 100%;
+    padding: 0px;
+    margin: 0px;
 }
 
 .header-image {
@@ -42,8 +43,9 @@ footer {
     text-align: center;
     z-index: 2;
     left: 50%;
-    transform: translate(-50%,-140%);
-    white-space:nowrap ;
+    top: 1.5rem;
+    transform: translate(-50%, 0%);
+    width: fit-content;
   }
 
 #quotes {
@@ -135,6 +137,9 @@ a:active {
     }
     .stats {
         display: none;
+    }
+    .header-text {
+        margin-top: 1.1rem;
     }
     #quotes {
         display: none;
